components/production/metaphor-frontend/templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: metaphor-frontend-production-ingress
  namespace: production
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`metaphor-frontend-production.localdev.me`)
    services:
    - name: metaphor-frontend-production
      port: 80
  tls:
    secretName: metaphor-frontend-production-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: production
spec:
  redirectScheme:
    scheme: https
    permanent: true
